--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".EinfachesRechnen" />
-        <activity android:name=".EinfachesRechnenMitEingabe"></activity>
+        <activity android:name=".EinfachesRechnenMitEingabe" />
+
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
